# beta-fullstack-assignment

./: README.md
.github/workflows/: rust.yml
simple_application/static-page-impl/: README.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
simple_application/static-page-impl/src/app/: globals.css  layout.tsx  page.tsx
simple_application/static-page-impl/src/components/: content.tsx  navBack.tsx  title.tsx  voteResult.tsx  yourVotingStatus.tsx
simple_application/static-page-impl/src/components/shared/: button.tsx  horizontalLine.tsx  progressBar.tsx  result.tsx  resultList.tsx  resultStatus.tsx  resultStatusList.tsx  status.tsx  text.tsx
system_design/: README.md
system_design/trading_bot_system/: Cargo.toml  README.md
