[workspace]
members = [
    "packages/data_collection",
    "packages/arbitrage_strategy",
    "packages/trading_module",
    "packages/database_module",
    "packages/backtesting",
    "packages/monitoring_module",
    "packages/logging_module",
    "packages/notification_module",
    "packages/trading_bot_lib"
]